# pcl_tutorial

./: .gitignore  CMakeLists.txt  README.md  lec00_usage.cpp  lec01_1_shared_ptr.cpp  lec01_2_ptr.cpp  lec03_transformation.cpp  lec04_visualization.cpp  lec05_voxelization.cpp  lec06_pass_through.cpp  lec07_sor.cpp  lec08_radius_search.cpp  lec09_knn.cpp  lec10_1_normal.cpp  lec10_2_normal_corner.cpp  lec11_icp.cpp  lec12_gicp.cpp  lec13_1_ransac_pose.cpp  lec13_2_ransac_ground.cpp  lec2_1_shared_ptr.cpp  lec2_2_ptr.cpp  lec2_3_ptr_in_class.cpp  lec3_transformation.cpp  lec4_voxelization.cpp  lec5_pass_through.cpp  lec6_sor.cpp  lec7_normal.cpp  lec7_visualization.cpp  lec8_radius_search.cpp  lec9_1_extract.cpp  package.xml
materials/: naverlabs_vel16.pcd
